Added some css classes, not implemented them.
There was a bug in core.js, returning shuffled list of people instead of ordered.

Reduced level change time in higher rounds.

Some little changes in html structure to make styling easier.

Some changes in main page java script.

--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,10 @@
  color: red;
 }
 
+.btnwrapper {
+
+}
+
 .btn.answer {
 	color: blue;
 }
@@ -19,3 +23,14 @@
 	color: red;
 }
 
+body {
+	overflow:hidden;
+}
+.wrapper {
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 2em;
+	position: fixed;
+	overflow:hidden;
+}
