--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,32 @@
 .name {
+	font-family: 'Mj_Faraz';
+	font-family: 'Mj_Flow';
     clear:both;
     display: block;
+	color: #eaffe6;
+	text-align: center;
+	width: 100%;
+	font-size: 72px;
 }
 
 .fixed {
- color: red;
+	color: #ffd97e;
 }
 
 .btnwrapper {
-
+	text-align:center;
+	position: fixed;
+	bottom: 100px;
 }
 
 .btn.answer {
     color: blue;
+	font-size: 15px;
+	margin: 10px 5px 10px 5px;
+	padding: 10px;
+	border: 1px solid #eee;
+	-webkit-border-radius: 5px;
+	
 }
 
 .btn.correct.answer {
@@ -25,6 +39,8 @@
 
 body {
     overflow:hidden;
+	margin: 0;
+	padding: 0;
 }
 .wrapper {
     width: 100%;
@@ -33,4 +49,11 @@ body {
     padding: 2em;
     position: fixed;
     overflow:hidden;
+	
+	background-image: url('../img/back.png');
+    background-size: cover;
+    background-clip: padding-box;
+    background-repeat: no-repeat;
+    color: white;
+    height: 100vh;
 }
