--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 .name {
-	font-family: 'Mj_Faraz';
+	/**font-family: 'Mj_Faraz'; **/
 	font-family: 'Mj_Flow';
     clear:both;
     display: block;
@@ -7,34 +7,43 @@
 	text-align: center;
 	width: 100%;
 	font-size: 72px;
+	position: fixed;
+	top: 40%;
 }
 
 .fixed {
 	color: #ffd97e;
+	text-shadow: 0px 0px 15px white;
 }
 
 .btnwrapper {
 	text-align:center;
 	position: fixed;
 	bottom: 100px;
+	width:100%;
 }
 
 .btn.answer {
-    color: blue;
-	font-size: 15px;
-	margin: 10px 5px 10px 5px;
+    color: rgba(255,255,255,0.9);
+	font-size: 25px;
+	font-weight: bold;
+	font-family:'Mj_Flow';
+	margin: 10px 20px 10px 20px;
 	padding: 10px;
 	border: 1px solid #eee;
 	-webkit-border-radius: 5px;
-	
+	-webkit-box-shadow: inset 0 6px 10px rgba(0,0,0,.125);
+	cursor: hand;
 }
 
 .btn.correct.answer {
-    color: green;
+	background-color: #5cb85c;
+	border-color: #4cae4c;
 }
 
 .btn.incorrect.answer {
-    color: red;
+	background-color: #d9534f;
+	border-color: #d43f3a;
 }
 
 body {
