Addded melon pictures to indicate round.
If there are 3 people left there will be no animation.

Changed background image so that poem book would look better.

--- a/css/main.css
+++ b/css/main.css
@@ -66,3 +66,15 @@ body {
     color: white;
     height: 100vh;
 }
+
+ul#level  {
+	display: inline;
+}
+
+.melon {
+	background: url('../img/melon.png');
+	background-size: contain;
+	width: 35px;
+	height: 35px;
+	display: inline-block;
+}
