--- a/css/main.css
+++ b/css/main.css
@@ -7,24 +7,25 @@
 	text-align: center;
 	width: 100%;
 	font-size: 72px;
-	position: fixed;
-	top: 40%;
-	left:0;
-	right:0;
+	margin-top:12%;
 }
 
 .fixed {
-	color: #ffd97e;
+	color: #7effd9;
 	text-shadow: 0px 0px 15px white;
 }
 
 .btnwrapper {
 	text-align:center;
-	position: fixed;
-	bottom: 100px;
+	clear: both;
+}
+ .lowerPart  {
+	position:fixed;
+	bottom:0;
 	left:0;
 	right:0;
-}
+	padding: 2em;
+ }
 
 .btn.answer, .name_box {
 	margin: 5px;
@@ -74,7 +75,7 @@ body {
     padding: 2em;
     position: fixed;
     overflow:hidden;
-	
+	z-index: -1;
 	background-image: url('../img/back.png');
     background-size: cover;
     background-clip: padding-box;
@@ -82,9 +83,23 @@ body {
     color: white;
 }
 
-ul#level  {
-	display: inline;
-	direction:ltr;
+.round {
+	color: white;
+	text-shadow: 0px 0px 5px #ffd97e;
+	font-family: 'Mj_Flow';
+	line-height: 35px;
+	font-size: 40px;
+	
+	width: 35px;
+	margin: 0px 0px 25px 0px;
+	position: fixed;
+	top: 1em;
+	right: 1em;
+}
+
+#level  {
+	clear:both;
+	text-align: left;
 }
 
 .melon {
@@ -93,25 +108,30 @@ ul#level  {
 	width: 35px;
 	height: 35px;
 	display: inline-block;
+	background-repeat: no-repeat;
 }
 
-.add {
+.addwrapper {
+	text-align: right;
+	display: block;
+	clear: both;
+}
+
+.btn.add {
 	background: url('../img/add.png');
 	background-size: contain;
 	width: 50px;
 	height: 50px;
-	position: fixed;
-	left: 2em;
-	bottom: 2em;
 	border: none;
 }
 
-#addDialog {
+.dialogBackground {
 	background: rgba(0,0,0,0.8);
 	width: 100%;
 	height: 100%;
 	overflow:hidden;
 	z-index:100;
+	
 	position: fixed;
 	top:0;
 	left:0;
@@ -119,14 +139,19 @@ ul#level  {
 	right:0;
 }
 
-#addDialog .frame {
-	
+.dialogBackground#addDialog  {
+	opacity: 0;
+}
+
+.dialogBackground .frame {
 	width: 500px;
 	background: whitesmoke;
 	-webkit-border-radius: 5px;
-	
-	margin-top:20%;
-	
-	
+	margin-top:15%;
 	padding: 30px;
+	text-align:right;
+}
+.dialogBackground .frame .textarea {
+	width: 100%;
+	height: 300px;
 }
