--- a/css/main.css
+++ b/css/main.css
@@ -151,3 +151,25 @@ body {
 	width: 100%;
 	height: 300px;
 }
+
+.winner.name {
+	color: rgba(0,0,0,0.8);
+	text-shadow: 0px 0px 25px rgba(0,0,0,0.5);
+	font-size: 6em;
+}	
+.thanks {
+	font-family: 'Mj_Faraz';
+	color: rgba(55,55,55,0.8);
+	font-size: 38px;
+}
+
+.small {
+	font-family: 'Mj_Faraz';
+	color: rgba(55,55,55,0.8);
+	font-size: 32px;
+}
+
+.dialogBackground#winnerDialog {
+	background: rgba(250,230,55,0.93);
+	
+}
