--- a/css/main.css
+++ b/css/main.css
@@ -84,8 +84,6 @@ body {
 }
 
 .round {
-	color: white;
-	text-shadow: 0px 0px 5px #ffd97e;
 	font-family: 'Mj_Flow';
 	line-height: 35px;
 	font-size: 40px;
@@ -172,4 +170,21 @@ body {
 .dialogBackground#winnerDialog {
 	background: rgba(250,230,55,0.93);
 	
+}
+.peoplenumberwrapper {
+	direction: rtl;
+	text-align: right;
+	font-family: 'Mj_Faraz';
+	font-size:1.6em;
+	margin: 0px 20px 0px 0px;
+	padding: 0px 0px 0px 0px;
+	font-size: 1.6em;
+	line-height: 50px;
+	display: inline;
+	position: relative;
+	top: -15px;
+}
+.peoplenumberwrapper .people.number, .round {
+	color: white;
+	text-shadow: 0px 0px 5px #ffd97e;
 }
